# agent-conclave

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.beads/: issues.jsonl
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
conclave/: __init__.py  audit.py  bus.py  cli.py  config.py  events.py  mcp.py  mcp_bridge.py  pipeline.py  quality_audit.py  rag.py  scheduler.py  server.py  sources.py  store.py  verification.py
conclave/cli/: __init__.py  __main__.py  hunt.py  knowledge.py  multi_model_hunt.py  scrape_platforms.py  slither_runner.py  submission.py
config/: default.yaml  example.yaml
docs/: ARCHITECTURE.md  CONCLAVE-BOOTSTRAP.md  CONFIG.md  architecture.md  benchmarks.synthetic.json  benchmarks.synthetic.md  eval-harness.md  examples.md  faq.md  guardrails.md  index.md  public-scope.md  redaction-policy.md  setup.md  threat-model.md  use-cases.md
examples/: demo.py  multi_agent.py  sanitized_workflow.md
scripts/: benchmark_synthetic.py  demo.py  redact.py
systemd/: conclave-audit.service  conclave-audit.timer  conclave-reconcile.service  conclave-reconcile.timer  conclave-validate.service  conclave-validate.timer  conclave.service
tests/: test_calibration.py  test_chat_integration.py  test_cli_timeout_fallback.py  test_config_validation.py  test_deliberation.py  test_domain_routing.py  test_domains.py  test_events.py  test_gemini.py  test_hunt.py  test_model_gate.py  test_openai_compat.py  test_planner.py  test_preflight.py  test_quality.py  test_scheduler.py  test_smoke.py  test_sources.py  test_ui_smoke.py  ui_state.test.js
(+35 files in other folders)
